2025-11-23T12:27:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19611137674 # 1323
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-23
* notice: last 14d: unq all: 62 94
* notice: prev accum: outdated-unq outdated-all / unq all: 5013 9987 / 5085 10080
* notice: next accum: outdated-unq outdated-all / unq all: 5014 9988 / 5087 10082
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-11-09] / [2025-11-23]

2025-11-23T01:21:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19603899466 # 1322
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-23
* notice: last 14d: unq all: 61 93
* notice: prev accum: outdated-unq outdated-all / unq all: 5012 9986 / 5085 10080
* notice: next accum: outdated-unq outdated-all / unq all: 5013 9987 / 5085 10080
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-08] / []

2025-11-21T12:30:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19570558449 # 1319
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-21
* notice: last 14d: unq all: 61 94
* notice: prev accum: outdated-unq outdated-all / unq all: 5011 9984 / 5077 10069
* notice: next accum: outdated-unq outdated-all / unq all: 5012 9986 / 5085 10080
* notice: prev exec diff / last date diff / accum: unq all: +8 +11 -0 -0 / +8 +11 -0 -0 / 8 11
* notice: removed / changed dates: [2025-11-07] / [2025-11-21]

2025-11-21T01:11:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19556554338 # 1318