@@ -1,3 +1,12 @@
+2025-11-25T01:11:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19654788419 # 1326
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-25
+* notice: last 14d: unq all: 54 82
+* notice: prev accum: outdated-unq outdated-all / unq all: 5014 9988 / 5087 10082
+* notice: next accum: outdated-unq outdated-all / unq all: 5024 10000 / 5087 10082
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-11-10] / []
+
 2025-11-23T12:27:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19611137674 # 1323
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-23
